--- a/web/index.html
+++ b/web/index.html
@@ -3033,7 +3033,7 @@
                     <div class="row">
                         <div class="col">
                             <div class="col">
-                                <button type="button" class="btn btn-info btn-floating ms-2 me-2 shadow w-100 mt-5">
+                                <button type="button" class="btn btn-info btn-floating ms-2 me-2 shadow w-100 mt-5" id="calculateFullIncome">
                                     <i class="fas fa-plus"></i>
                                     Calculate
                                 </button>
@@ -3697,10 +3697,10 @@
                             <h3 class="text-center text-white bg">Booking Details</h3>
                         </div>
 
-                        <div class="col ms-5 me-5 h-25"  style="background-color: #06357a">
+                        <!--<div class="col ms-5 me-5 h-25"  style="background-color: #06357a">
                             <h3 class="text-center text-white">Fill Out This Fields</h3>
                         </div>
-
+-->
                     </div>
 
                     <div class="row">
@@ -3763,7 +3763,7 @@
                             </div>
                         </div>
 
-                        <div class="col ms-5 me-5" style="background-color: #20c997">
+                        <!--<div class="col ms-5 me-5" style="background-color: #20c997">
                             <div class="row mt-4">
                                 <div class="col ms-3 me-3">
                                     <div class="form-check">
@@ -3798,7 +3798,7 @@
                                 </div>
                             </div>
 
-                        </div>
+                        </div>-->
                     </div>
 
                     <div class="row ">
@@ -3813,17 +3813,102 @@
 
                 <div class="col w-25">
                     <div class="row mb-5">
-                        <div class="col ms-5 me-5 h-25" style="background-color: #06357a">
+                        <div class="col ms-3 me-3 h-25" style="background-color: #06357a">
                             <h3 class="text-center text-white bg">Selected Cars</h3>
                         </div>
                     </div>
 
-                    <form class="ms-5 me-5 ">
+                    <form class="ms-3 me-3 ">
                         <div>
                             <table class="table align-middle mb-0 bg-white" id="tblSelectedCars">
-
+                                <thead class="bg-light">
+                                <tr>
+                                    <th>Car Image</th>
+                                    <th>Brand</th>
+                                    <th>Colour</th>
+                                    <th>Type</th>
+                                    <th>Driver</th>
+                                    <th>Driver Name</th>
+                                    <th>Driver Contact</th>
+                                    <th>Lose Damage Waiver Payment</th>
+                                    <th>Action</th>
+                                </tr>
+                                </thead>
                                 <tbody>
-
+                                <tr>
+                                    <td>
+                                        <div class="d-flex align-items-center">
+                                            <img src="assets/images/1200x-1.jpg" alt="" style="width: 50px; height: 50px" class=""/>
+                                        </div>
+                                        <h6  id="id" class="id text-black">V00-0001</h6>
+                                    </td>
+                                    <td>
+                                       Susuki
+                                    </td>
+                                    <td>
+                                        Red
+                                    </td>
+                                    <td>
+                                        Manual
+                                    </td>
+                                    <td>
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="checkbox" value="" id="checkDriverIfWant" />
+                                            <label class="form-check-label fs-4" for="checkDriverIfWant">If you want a driver please click</label>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        Amal
+                                    </td>
+                                    <td>
+                                        078-7991075
+                                    </td>
+                                    <td>
+                                        1000.00
+                                    </td>
+                                    <td>
+                                        <button type="button" class="btn btn-danger btn-sm px-3" data-ripple-color="dark">
+                                            <i class="fas fa-times"></i>
+                                        </button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="d-flex align-items-center">
+                                            <img src="assets/images/1200x-1.jpg" alt="" style="width: 50px; height: 50px" class=""/>
+                                        </div>
+                                        <h6  id="id" class="id text-black">V00-0001</h6>
+                                    </td>
+                                    <td>
+                                        Susuki
+                                    </td>
+                                    <td>
+                                        Red
+                                    </td>
+                                    <td>
+                                        Manual
+                                    </td>
+                                    <td>
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="checkbox" value="" id="checkDriverIfWant" />
+                                            <label class="form-check-label fs-4" for="checkDriverIfWant">If you want a driver please click</label>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        Amal
+                                    </td>
+                                    <td>
+                                        078-7991075
+                                    </td>
+                                    <td>
+                                        1000.00
+                                    </td>
+                                    <td>
+                                        <button type="button" class="btn btn-danger btn-sm px-3" data-ripple-color="dark">
+                                            <i class="fas fa-times"></i>
+                                        </button>
+                                    </td>
+                                </tr>
                                 </tbody>
                             </table>
 
@@ -3840,7 +3925,7 @@
 <script src="assets/jquery/jquery-3.6.0.min.js"></script>
 <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 
-<script src="controllers/DashBoardController.js"></script>
+<!--<script src="controllers/DashBoardController.js"></script>-->
 <script src="controllers/AdminController.js"></script>
 <script src="controllers/HomeController.js"></script>
 <script src="controllers/RegisterController.js"></script>
