--- a/web/index.html
+++ b/web/index.html
@@ -3818,11 +3818,19 @@
                         </div>
                     </div>
 
+                    <div class="row">
+                        <button type="button" class="btn btn-info btn-sm w-25 ms-5 mb-3" data-ripple-color="dark" id="newCar">
+                            <i class="fas fa-plus"></i>
+                            NEW
+                        </button>
+                    </div>
+
                     <form class="ms-3 me-3 ">
                         <div>
                             <table class="table align-middle mb-0 bg-white" id="tblSelectedCars">
                                 <thead class="bg-light">
                                 <tr>
+                                    <th scope="row">#</th>
                                     <th>Car Image</th>
                                     <th>Brand</th>
                                     <th>Colour</th>
@@ -3835,80 +3843,7 @@
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <tr>
-                                    <td>
-                                        <div class="d-flex align-items-center">
-                                            <img src="assets/images/1200x-1.jpg" alt="" style="width: 50px; height: 50px" class=""/>
-                                        </div>
-                                        <h6  id="id" class="id text-black">V00-0001</h6>
-                                    </td>
-                                    <td>
-                                       Susuki
-                                    </td>
-                                    <td>
-                                        Red
-                                    </td>
-                                    <td>
-                                        Manual
-                                    </td>
-                                    <td>
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" value="" id="checkDriverIfWant" />
-                                            <label class="form-check-label fs-4" for="checkDriverIfWant">If you want a driver please click</label>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        Amal
-                                    </td>
-                                    <td>
-                                        078-7991075
-                                    </td>
-                                    <td>
-                                        1000.00
-                                    </td>
-                                    <td>
-                                        <button type="button" class="btn btn-danger btn-sm px-3" data-ripple-color="dark">
-                                            <i class="fas fa-times"></i>
-                                        </button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <div class="d-flex align-items-center">
-                                            <img src="assets/images/1200x-1.jpg" alt="" style="width: 50px; height: 50px" class=""/>
-                                        </div>
-                                        <h6  id="id" class="id text-black">V00-0001</h6>
-                                    </td>
-                                    <td>
-                                        Susuki
-                                    </td>
-                                    <td>
-                                        Red
-                                    </td>
-                                    <td>
-                                        Manual
-                                    </td>
-                                    <td>
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" value="" id="checkDriverIfWant" />
-                                            <label class="form-check-label fs-4" for="checkDriverIfWant">If you want a driver please click</label>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        Amal
-                                    </td>
-                                    <td>
-                                        078-7991075
-                                    </td>
-                                    <td>
-                                        1000.00
-                                    </td>
-                                    <td>
-                                        <button type="button" class="btn btn-danger btn-sm px-3" data-ripple-color="dark">
-                                            <i class="fas fa-times"></i>
-                                        </button>
-                                    </td>
-                                </tr>
+
                                 </tbody>
                             </table>
 
