start to reserve

--- a/web/index.html
+++ b/web/index.html
@@ -2963,8 +2963,8 @@
                     <div class="row">
                         <div class="col ms-5 me-5"  style="background-color: #20c997">
                             <div class="row mt-4">
-                                <label class="form-label text-black" id="reserveId" ></label>
-                                <label class="form-label text-black" id="scheduleId" ></label>
+                                <label class="form-label text-white" id="reserveId" ></label>
+                                <label class="form-label text-white" id="scheduleId" ></label>
                                 <div class="col ms-3 me-3">
                                     <label class="form-label text-black" for="pickUpTimeEdit" >Pickup Date</label>
                                     <div >
